fix the navigation extra space on the right.

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -133,11 +133,11 @@ header {
 	border-bottom: 1px dashed var(--color-gray-20);
 	height: var(--header-height);
 }
-header:after {
+/* header:after {
 	content: "";
 	display: table;
 	clear: both;
-}
+} */
 
 .filters {
 	margin: 1em 0;
@@ -268,6 +268,7 @@ code {
 /* Header */
 header {
 	height: var(--header-height);
+	width: 100%;
 	display: flex;
 	gap: 1em .5em;
 	flex-wrap: wrap;
